--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
     "@capacitor/android": "5.7.2",
     "@capacitor/app": "5.0.7",
     "@capacitor/core": "5.7.2",
+    "@capacitor/device": "^5.0.7",
     "@capacitor/haptics": "5.0.7",
     "@capacitor/ios": "5.7.2",
     "@capacitor/keyboard": "5.0.8",
+    "@capacitor/network": "^5.0.7",
     "@capacitor/preferences": "^5.0.7",
     "@capacitor/status-bar": "5.0.7",
     "@ionic/angular": "^6.7.5",
